profilesdir = $(datadir)/color/icc/Argyll
profiles_DATA =						\
	ClayRGB1998.icm					\
	lab2lab.icm					\
	AppleRGB.icc					\
	CIE-RGB.icc					\
	ColorMatchRGB.icc				\
	NTSC-RGB.icc					\
	PAL-RGB.icc					\
	ProPhotoRGB.icc					\
	SMPTE-C-RGB.icc					\
	sRGB.icm

licensedir = $(datadir)/shared-color-profiles/Argyll
license_DATA =						\
	LICENSE						\
	README

EXTRA_DIST =						\
	$(profiles_DATA)				\
	$(license_DATA)

