profilesdir = $(datadir)/color/icc/Oysonar
profiles_DATA =						\
	Gray.icc					\
	Gray-CIE_L.icc					\
	FOGRA28L_webcoated.icc				\
	FOGRA29L_uncoated.icc				\
	FOGRA30L_uncoated_yellowish.icc			\
	FOGRA39L_coated.icc				\
	FOGRA40L_SC_paper.icc				\
	GRACoL_TR006_coated.icc				\
	SNAP_TR002_newsprint.icc			\
	SWOP_TR003_coated_3.icc				\
	SWOP_TR005_coated_5.icc

licensedir = $(datadir)/shared-color-profiles/Oysonar
license_DATA =						\
	LICENSE						\
	README

EXTRA_DIST =						\
	$(profiles_DATA)				\
	$(license_DATA)

