profilesdir = $(datadir)/color/icc/Yamma
profiles_DATA =						\
	L_invert.icc					\
	OldPhoto.icc					\
	RedAndBlack.icc					\
	RedAndGreen.icc

licensedir = $(datadir)/shared-color-profiles/Yamma
license_DATA =						\
	LICENSE						\
	README

EXTRA_DIST =						\
	$(profiles_DATA)				\
	$(license_DATA)

